# ESP_FaceDetection

./: .gitignore  README.md
Tensorflow_model/: README.txt
Tensorflow_model/FDDB_Dataset/: README.dataset.txt  README.roboflow.txt
main/: CMakeLists.txt
main/Include/: camera.h  http_server.h  main.h  wifi.h
main/Source/: camera.c  http_server.c  main.c  wifi.c
main/Source/html/: MediaPipeAlgorithm.js  index.html  pages.h  script.js  web_files.h
